--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "react-webcam": "^7.2.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
