--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.540.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-qr-barcode-scanner": "^2.1.8",
     "react-router-dom": "^7.7.1",
     "react-webcam": "^7.2.0",
     "zustand": "^5.0.7"
